syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 1675
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message AvatarExpeditionStartReq {
	uint64 avatar_guid = 8;
	uint32 exp_id = 2;
	uint32 hour_time = 7;
}
